--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "IArray",
-    "version": "1.1.0",
+    "version": "1.1.1",
     "description": "Immutable Array",
     "main": "IArray.js",
     "scripts": {
@@ -11,5 +11,6 @@
     "dependencies": {},
     "devDependencies": {
         "tarsy": "^0.5.1"
-    }
+    },
+    "homepage": "https://gitlab.com/bluejava/IArray"
 }
